<resources>
    <string name="app_name">Week 1 Test - Green Flag App Android</string>
    <string name="companySlogan">GreenFlag customers can create an account to access</string>
    <string name="car_health_updates">Car health updates</string>
    <string name="next">Next</string>
    <string name="passwordDirections">Your password should have a minimum of 8 characters and contain at least, one uppercase andc and lower case letter. You can use special characters.</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_password">Create password</string>
    <string name="email_address">Email Address</string>
    <string name="create_an_account">Create an account</string>
    <string name="policy_information">Policy information</string>
    <string name="request_a_rescue_online">Request a rescue online</string>
    <string name="editEmailText">An account already exist for this email address</string>
    <string name="notmatch">Your passwords don\'t match</string>
    <string name="second_password_error">One of the passwords you entered wasn\'t valid</string>
    <string name="back_symbol">\u003c</string>
</resources>